rs_src/bindings.rs

#[test]
fn bindgen_test_layout_rt_driver() {
    const UNINIT: ::core::mem::MaybeUninit<rt_driver> = ::core::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::core::mem::size_of::<rt_driver>(),
        48usize,
        concat!("Size of: ", stringify!(rt_driver))
    );
    assert_eq!(
        ::core::mem::align_of::<rt_driver>(),
        4usize,
        concat!("Alignment of ", stringify!(rt_driver))
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).dev_ops) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(rt_driver),
            "::",
            stringify!(dev_ops)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).fops) as usize - ptr as usize },
        4usize,
        concat!(
            "Offset of field: ",
            stringify!(rt_driver),
            "::",
            stringify!(fops)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).name) as usize - ptr as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(rt_driver),
            "::",
            stringify!(name)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).dev_type) as usize - ptr as usize },
        12usize,
        concat!(
            "Offset of field: ",
            stringify!(rt_driver),
            "::",
            stringify!(dev_type)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).device_size) as usize - ptr as usize },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(rt_driver),
            "::",
            stringify!(device_size)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).flag) as usize - ptr as usize },
        20usize,
        concat!(
            "Offset of field: ",
            stringify!(rt_driver),
            "::",
            stringify!(flag)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).dev_match) as usize - ptr as usize },
        24usize,
        concat!(
            "Offset of field: ",
            stringify!(rt_driver),
            "::",
            stringify!(dev_match)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).probe) as usize - ptr as usize },
        28usize,
        concat!(
            "Offset of field: ",
            stringify!(rt_driver),
            "::",
            stringify!(probe)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).probe_init) as usize - ptr as usize },
        32usize,
        concat!(
            "Offset of field: ",
            stringify!(rt_driver),
            "::",
            stringify!(probe_init)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).remove) as usize - ptr as usize },
        36usize,
        concat!(
            "Offset of field: ",
            stringify!(rt_driver),
            "::",
            stringify!(remove)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).ops) as usize - ptr as usize },
        40usize,
        concat!(
            "Offset of field: ",
            stringify!(rt_driver),
            "::",
            stringify!(ops)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).drv_priv_data) as usize - ptr as usize },
        44usize,
        concat!(
            "Offset of field: ",
            stringify!(rt_driver),
            "::",
            stringify!(drv_priv_data)
        )
    );
}
pub type rt_driver_t = *mut rt_driver;
#[doc = " Notify structure"]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct rt_device_notify {
    pub notify: ::core::option::Option<unsafe extern "C" fn(dev: rt_device_t)>,
    pub dev: *mut rt_device,
}
#[test]
fn bindgen_test_layout_rt_device_notify() {
    const UNINIT: ::core::mem::MaybeUninit<rt_device_notify> = ::core::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::core::mem::size_of::<rt_device_notify>(),
        8usize,
        concat!("Size of: ", stringify!(rt_device_notify))
    );
    assert_eq!(
        ::core::mem::align_of::<rt_device_notify>(),
        4usize,
        concat!("Alignment of ", stringify!(rt_device_notify))
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).notify) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(rt_device_notify),
            "::",
            stringify!(notify)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).dev) as usize - ptr as usize },
        4usize,
        concat!(
            "Offset of field: ",
            stringify!(rt_device_notify),
            "::",
            stringify!(dev)
        )
    );
}
#[doc = " block device geometry structure"]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct rt_device_blk_geometry {
    #[doc = "< count of sectors"]
    pub sector_count: rt_uint64_t,
    #[doc = "< number of bytes per sector"]
    pub bytes_per_sector: rt_uint32_t,
    #[doc = "< number of bytes to erase one block"]
    pub block_size: rt_uint32_t,
}
#[test]
fn bindgen_test_layout_rt_device_blk_geometry() {
    const UNINIT: ::core::mem::MaybeUninit<rt_device_blk_geometry> =
        ::core::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::core::mem::size_of::<rt_device_blk_geometry>(),
        16usize,
        concat!("Size of: ", stringify!(rt_device_blk_geometry))
    );
    assert_eq!(
        ::core::mem::align_of::<rt_device_blk_geometry>(),
        8usize,
        concat!("Alignment of ", stringify!(rt_device_blk_geometry))
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).sector_count) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(rt_device_blk_geometry),
            "::",
            stringify!(sector_count)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).bytes_per_sector) as usize - ptr as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(rt_device_blk_geometry),
            "::",
            stringify!(bytes_per_sector)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).block_size) as usize - ptr as usize },
        12usize,
        concat!(
            "Offset of field: ",
            stringify!(rt_device_blk_geometry),
            "::",
            stringify!(block_size)
        )
    );
}
#[doc = " sector arrange struct on block device"]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct rt_device_blk_sectors {
    #[doc = "< begin sector"]
    pub sector_begin: rt_uint64_t,
    #[doc = "< end sector"]
    pub sector_end: rt_uint64_t,
}
#[test]
fn bindgen_test_layout_rt_device_blk_sectors() {
    const UNINIT: ::core::mem::MaybeUninit<rt_device_blk_sectors> =
        ::core::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::core::mem::size_of::<rt_device_blk_sectors>(),
        16usize,
        concat!("Size of: ", stringify!(rt_device_blk_sectors))
    );
    assert_eq!(
        ::core::mem::align_of::<rt_device_blk_sectors>(),
        8usize,
        concat!("Alignment of ", stringify!(rt_device_blk_sectors))
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).sector_begin) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(rt_device_blk_sectors),
            "::",
            stringify!(sector_begin)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).sector_end) as usize - ptr as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(rt_device_blk_sectors),
            "::",
            stringify!(sector_end)
        )
    );
}
pub const RTGRAPHIC_PIXEL_FORMAT_MONO: _bindgen_ty_2 = 0;
pub const RTGRAPHIC_PIXEL_FORMAT_GRAY4: _bindgen_ty_2 = 1;
pub const RTGRAPHIC_PIXEL_FORMAT_GRAY16: _bindgen_ty_2 = 2;
pub const RTGRAPHIC_PIXEL_FORMAT_RGB332: _bindgen_ty_2 = 3;
pub const RTGRAPHIC_PIXEL_FORMAT_RGB444: _bindgen_ty_2 = 4;
pub const RTGRAPHIC_PIXEL_FORMAT_RGB565: _bindgen_ty_2 = 5;
pub const RTGRAPHIC_PIXEL_FORMAT_RGB565P: _bindgen_ty_2 = 6;
pub const RTGRAPHIC_PIXEL_FORMAT_BGR565: _bindgen_ty_2 = 6;
pub const RTGRAPHIC_PIXEL_FORMAT_RGB666: _bindgen_ty_2 = 7;
pub const RTGRAPHIC_PIXEL_FORMAT_RGB888: _bindgen_ty_2 = 8;
pub const RTGRAPHIC_PIXEL_FORMAT_BGR888: _bindgen_ty_2 = 9;
pub const RTGRAPHIC_PIXEL_FORMAT_ARGB888: _bindgen_ty_2 = 10;
pub const RTGRAPHIC_PIXEL_FORMAT_ABGR888: _bindgen_ty_2 = 11;
pub const RTGRAPHIC_PIXEL_FORMAT_RESERVED: _bindgen_ty_2 = 12;
pub type _bindgen_ty_2 = core::ffi::c_uint;
#[doc = " graphic device information structure"]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct rt_device_graphic_info {
    #[doc = "< graphic format"]
    pub pixel_format: rt_uint8_t,
    #[doc = "< bits per pixel"]
    pub bits_per_pixel: rt_uint8_t,
    #[doc = "< bytes per line"]
    pub pitch: rt_uint16_t,
    #[doc = "< width of graphic device"]
    pub width: rt_uint16_t,
    #[doc = "< height of graphic device"]
    pub height: rt_uint16_t,
    #[doc = "< frame buffer"]
    pub framebuffer: *mut rt_uint8_t,
    #[doc = "< allocated frame buffer size"]
    pub smem_len: rt_uint32_t,
}
